re-styled buttons and fixed some spacing

--- a/index.css
+++ b/index.css
@@ -50,20 +50,28 @@ table {
 	font-family: Roboto Mono; 
 	font-weight: normal;
   }
+  body {
+	  width: 600px; 
+	  margin: 0 auto;
+  }
+  #yosemite img{
+	border: 4px solid transparent;   
+	border-radius: 50%;
+	width: 20%;
+  }
   .visit{
-	background-color: #FF764E;
 	text-decoration:none;
   }
   .park{
-	background-color: #5ED3EB;
 	text-decoration: none; 
   }
   .involved{
-	background-color: #FFCD69;
 	text-decoration: none; 
   }
   h1{
 	font-family: chelsea market;
+	text-align: center; 
+	margin: auto; 
   }
   section {
 	background-color: #DDB9A3;
@@ -77,5 +85,63 @@ table {
   #bold2{
 	font-weight: 700;
   }
+.visit .park .involved{
+	border-radius: 25px; 
+}
+
+#fire img{
+	width: 10%; 
+	border: 4px solid transparent; 
+	height: auto; 
+	display: block; 
+	margin-left: auto;
+	margin-right: auto; 
+}
+#truck img{
+	width: 10%;
+	border: 4px solid transparent; 
+	display: block; 
+	margin-left: auto;
+	margin-right: auto; 
+	height: auto; 
+}
+#footerp img{
+	width: 100%;
+	height: 10%;
+	border: 4px solid transparent; 
+	padding-top: 4rem; 
+	padding-bottom: 1rem; 
+} 
+
+.orangebutton{
+	width: 100px; 
+	border: 3px solid transparent;
+	border-radius: 25px; 
+	background-color: #FF764E;
+	margin-left: 10%;
+	margin-right: 10%;  
+	margin-top: 10px; 
+	height: auto; 
+}
+.bluebutton{
+	width: 100px; 
+	border: 3px solid transparent; 
+	border-radius: 25px;
+	background-color: #5ED3EB;
+	margin-left: 40px;
+	margin-right: 40px; 
+	margin-top: 10px; 
+	margin-bottom: 20px; 
+	height: auto; 
+}
+.yellowbutton{
+	width: 100px;
+	border: 3px solid transparent; 
+	border-radius: 25px; 
+	background-color: #FFCD69;
+	margin-left: 30%;
+	margin-right: auto; 
+	height: auto; 
+}
 
   
